# LINEAE

./: .gitignore  README.md  demo_lineae.py  engine.py  main.py  pyproject.toml
ckpts/: MANIFEST.json
data/: annotation_rendering.py
datasets/: __init__.py  coco.py  collate.py  line_eval.py  transforms.py
models/: __init__.py
tests/: test_annotation_rendering.py  test_artifact_validation.py  test_auxiliary_paths.py  test_checkpoint_preflight.py  test_dataset_pipeline.py  test_decoder_optimizations.py  test_demo_lineae.py  test_dinov3_backbone.py  test_distillation.py  test_distributed_helpers.py  test_dn_components.py  test_encoder_optimizations.py  test_evaluate_checkpoint.py  test_experiment_matrix.py  test_gradient_accumulation.py  test_hgnetv2_backbone.py  test_image_preprocess.py  test_line_evaluator.py  test_lineae_training_step.py  test_onnx_export.py  test_reference_boundaries.py  test_reporting_tools.py  test_supervised_line_semantics.py  test_teacher_qualification.py  test_tensorboard_compatibility.py  test_tensorrt_benchmark.py  test_training_profile.py  test_training_state.py  test_validation_render.py  test_variants.py
tools/: __init__.py  analyze_pareto.py  analyze_repeated_pareto.py  benchmark.py  benchmark_tensorrt.py  checkpoint_preflight.py  compare_training_profiles.py  deployment_parity.py  evaluate_checkpoint.py  evaluate_onnx.py  export_onnx.py  generate_model_card.py  plan_experiment_matrix.py  profile_training.py  qualify_best_teacher.py  qualify_teacher.py
util/: artifact_validation.py  console.py  deployment.py  experiment.py  misc.py  (+9 more)
(+76 files in other folders)
