[project]
name = "lineae"
version = "1.0.0"
description = "Enhanced LINEA line detection with DINOv3 and distillation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addict==2.4.0",
    "calflops==0.3.2",
    "numpy==2.4.6",
    "pillow==12.3.0",
    "pycocotools==2.0.11",
    "scipy==1.17.1",
    "tensorboardx==2.6.5",
    "torch==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "transformers==4.57.6",
    "tqdm==4.69.0",
    "yapf==0.43.0",
    "gdown==6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "ruff==0.15.22",
]
export = [
    "onnx==1.22.0",
    "onnxruntime-gpu==1.26.0",
    "onnxsim==0.6.5",
]
tensorrt = [
    "pycuda==2026.1",
    "tensorrt-cu12==11.1.0.106",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
